# joystick-inversion

./: Justfile  README.md  constants.py  io.py  joystick.py  parameters.py  plot.py  pyproject.toml  run.py  run.sh  system.py  train.py  utils.py
.github/: copilot-instructions.md
data/sensor1/: summary_averages_east.csv  summary_averages_north.csv  summary_averages_south.csv  summary_averages_west.csv  summary_averages_zero.csv
data/sensor2/: summary_averages_sensor2_east.csv  summary_averages_sensor2_north.csv  summary_averages_sensor2_south.csv  summary_averages_sensor2_west.csv  summary_averages_sensor2_zero.csv
notebooks/: main.ipynb
src/joystick_inversion/: __init__.py  eval.py  parameters.py  plot.py  system.py  train.py
