[project]
name = "joystick-inversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack Smith", email = "jacksmith2000@me.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "magpylib>=5.2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "scikit-learn>=1.8.0",
    "scikit-learn-stubs>=0.0.3",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff.lint]
ignore = ["E731", "F541"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
